# prism-did

./: Cargo.toml  justfile
crates/client/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: account.rs  builder.rs  operation.rs  test_transaction_builder.rs  transaction.rs
crates/common/src/api/: mod.rs  types.rs
crates/common/src/tests/: mod.rs
crates/errors/src/: lib.rs
crates/keys/: Cargo.toml
crates/keys/src/: payload.rs  signatures.rs  verifying_keys.rs
crates/keys/src/tests/: mod.rs
crates/node_types/prover/src/: sequencer.rs  webserver.rs
crates/node_types/prover/src/prover/tests/: mod.rs
crates/serde/: Cargo.toml
crates/serde/src/: base32.rs  base64.rs  binary.rs  lib.rs
crates/tests/src/: lib.rs
crates/tree/: Cargo.toml
crates/tree/src/: proofs.rs  snarkable_tree.rs
crates/tree/src/tests/: mod.rs
crates/zk/sp1-script/src/: main.rs
elf/: base-riscv32im-succinct-zkvm-elf  recursive-riscv32im-succinct-zkvm-elf
verification_keys/: keys.json
