[package]
name = "prism-common"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# prism
prism-errors.workspace = true
prism-keys.workspace = true

# async
async-trait.workspace = true

# serde
bs58 = "0.4.0"
prism-serde.workspace = true
serde.workspace = true

# OAS spec
utoipa.workspace = true

# celestia
celestia-types.workspace = true

# digest
sha2.workspace = true

# misc
anyhow.workspace = true

# testing
mockall = { workspace = true, optional = true }
serde_ipld_dagcbor = "0.6.3"
base32 = "0.5.1"

[features]
default = []
test_utils = []
mockall = ["dep:mockall"]
