[package]
name = "prism-serde"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true

# serde
base64.workspace = true
bech32.workspace = true
serde.workspace = true
serde_bytes.workspace = true
hex.workspace = true

# binary
bincode.workspace = true
serde_ipld_dagcbor = "0.6.3"
base32 = "0.5.1"
